--- a/main/index.html
+++ b/main/index.html
@@ -7,7 +7,7 @@
     <title>Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
-    <!-- google site verification -->
+    <meta name="google-site-verification" content="1vnjD_Zm8rXnAe3H5_gcnLL9DjEpJxrfAjjH6aQECng" />
 </head>
 
 <body>
