--- a/main/index.html
+++ b/main/index.html
@@ -4,7 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <meta name="title" content="Archit Jain | The Developer">
+    <meta name="description" content="Hi, I'm Archit Jain, aka '0xAcrhit', a programmer and student in India. I love exploring and learning new Tech. Currently I am learning MERN Stack, Python and Ai Implementation, Cyber Security, Ethical Hacking, and many more. By keeping my self diverse in tech field and following my passion. I am a self-taught programmer. I enjoys reading business, stock and crypto market news in free time.">
+    <meta name="keywords" content="0xarchit, 0xArchit, Archit Jain, ArchitJain, Programmer, Coder, Technologist, Archit The Developer, Archit Jain The Developer">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="1 days">
+    <meta name="author" content="0xArchit">
+    <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+    <meta name="bingbot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+
+
+    <title>Archit Jain | The Developer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <meta name="google-site-verification" content="1vnjD_Zm8rXnAe3H5_gcnLL9DjEpJxrfAjjH6aQECng" />
