--- a/main/dbms.html
+++ b/main/dbms.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DBMS Theory Assignment</title>
     <style>
-	body {
+        body {
             font-family: Poppins, sans-serif;
             margin: 20px;
-            background: linear-gradient(135deg, #f5f7fa, #c3cfe2);
+            background: linear-gradient(135deg, #8b8b8b85, #00000063);
             color: #333;
             line-height: 1.6;
             font-size: 16px;
         }
-        h1, h2 {
+
+        h1,
+        h2 {
             color: #2c3e50;
             text-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             font-size: 25px;
         }
+
         pre {
             background: rgba(255, 255, 255, 0.2);
             backdrop-filter: blur(10px);
@@ -29,6 +33,7 @@
         }
     </style>
 </head>
+
 <body>
     <h1>DBMS Theory Assignment</h1>
 
@@ -435,4 +440,5 @@ Project_Item(project_id REFERENCES Project(project_id), item_id REFERENCES Item(
     </pre>
 
 </body>
+
 </html>
