--- a/main/index.html
+++ b/main/index.html
@@ -20,6 +20,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <meta name="google-site-verification" content="1vnjD_Zm8rXnAe3H5_gcnLL9DjEpJxrfAjjH6aQECng" />
+    <meta name="google-site-verification" content="vSZEJwYvtD3OAM0KHLl1SbL7PVsrUgd56XV8ALi5BmY" />
 </head>
 
 <body>
