--- a/main/index.html
+++ b/main/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <meta name="google-site-verification" content="1vnjD_Zm8rXnAe3H5_gcnLL9DjEpJxrfAjjH6aQECng" />
     <meta name="google-site-verification" content="vSZEJwYvtD3OAM0KHLl1SbL7PVsrUgd56XV8ALi5BmY" />
+    <link rel="stylesheet" href="./main.css">
 </head>
 
 <body>
@@ -138,7 +139,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-    <script src="./script.js"></script>
+    <script src="./main.js"></script>
 </body>
 
 </html>
