--- a/main/index.html
+++ b/main/index.html
@@ -58,7 +58,7 @@
             <div class="popup-content">
                 <h2>Thanks for showing interest in my profile.</h2>
                 <p>Get my resume from here:</p>
-                <a href="https://drive.google.com/file/d/1ljbJVGddcH8Zld8YO4vvepGt7FdIqgEb/view" class="btn btn-secondary btn-sm" id="download-btn2">
+                <a href="https://drive.google.com/file/d/1ljbJVGddcH8Zld8YO4vvepGt7FdIqgEb/view" class="btn btn-secondary btn-sm" id="download-btn2" target="_blank">
                     <i class="bi bi-download me-2"></i>Download
                 </a>
                 <button class="close-btn btn btn-secondary btn-sm" id="close-popup">Close</button>
