--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
-<html>
+<!doctype html>
+<html lang="en">
   <head>
-    <title>0xArchit</title>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/0xarchit.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>0xArchit | Developer</title>
   </head>
   <body>
-    <h1 style="padding: 60px;
-text-align: center;
-background: #256356;
-color: white;
-text-decoration: double;">Reserved Page For what I am cooking</h1>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
