--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
     <meta name="bingbot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
     <link rel="preload" href="/custom_cur.webp" as="image" type="image/webp">
-    <link rel="preload" href="/0xarchit.png" as="image">
+    <link rel="preload" href="/0xarchit.webp" as="image">
     <link rel="preconnect" href="https://files.0xarchit.is-a.dev">
-    <title>0xArchit | Developer</title>
+    <title>0xArchit | Archit Jain | The Developer</title>
   </head>
   <body>
     <div id="root"></div>
