--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/0xarchit.png" />
+    <link rel="icon" type="image/svg+xml" href="/0xarchit.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="title" content="Archit Jain | The Developer">
     <meta name="description" content="Hi, I'm Archit Jain, aka '0xAcrhit', a programmer and student in India. I love exploring and learning new Tech. Currently I am learning MERN Stack, Python and Ai Implementation, Cyber Security, Ethical Hacking, and many more. By keeping my self diverse in tech field and following my passion. I am a self-taught programmer. I enjoys reading business, stock and crypto market news in free time.">
