Update meta descriptions, enhance sitemap, and improve project card functionality

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/0xarchit.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="title" content="Archit Jain | The Developer">
-    <meta name="description" content="Hi, I'm Archit Jain, aka '0xAcrhit', a programmer and student in India. I love exploring and learning new Tech. Currently I am learning MERN Stack, Python and Ai Implementation, Cyber Security, Ethical Hacking, and many more. By keeping my self diverse in tech field and following my passion. I am a self-taught programmer. I enjoys reading business, stock and crypto market news in free time.">
+    <meta name="description" content="Hi, I'm Archit Jain, aka '0xArchit', a programmer and student in India. I love exploring and learning new Tech. Currently I am learning MERN Stack, Python and Ai Implementation, Cyber Security, Ethical Hacking, and many more. By keeping my self diverse in tech field and following my passion. I am a self-taught programmer. I enjoys reading business, stock and crypto market news in free time.">
     <meta name="keywords" content="0xarchit, 0xArchit, Archit Jain, ArchitJain, Programmer, Coder, Technologist, Archit The Developer, Archit Jain The Developer">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
